--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ openpyxl = "^3.1.5"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
+flake8 = "^7.1.1"
 
 [build-system]
 requires = ["poetry-core"]
