--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ openpyxl = "^3.1.5"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
 flake8 = "^7.1.1"
+bandit = "^1.7.10"
 
 [build-system]
 requires = ["poetry-core"]
