--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pytest = "^8.3.3"
 flake8 = "^7.1.1"
 bandit = "^1.7.10"
 pytest-assume = "^2.4.3"
+pytest-cov = "^5.0.0"
 
 [build-system]
 requires = ["poetry-core"]
