--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ reportlab = "^4.2.5"
 googletrans = "4.0.0-rc1"
 pandas = "^2.2.3"
 openpyxl = "^3.1.5"
+loguru = "^0.7.2"
 
 
 [tool.poetry.group.dev.dependencies]
